# brainsurgery

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.pre-commit-cache/: db.db
brainsurgery/: __init__.py  arena.py  cli.py  completion_config.py  completion_rules.yaml  config.py  dtypes.py  execution.py  expression.py  expressions.py  history.py  interactive.py  mappings.py  matching.py  model.py  phlora.py  plan.py  provider_utils.py  providers.py  refs.py  render.py  resolver.py  summary.py  targeting.py  tensor_checks.py  ternary.py  transform.py  transform_types.py  workers.py
brainsurgery/algorithms/: __init__.py  phlora.py
brainsurgery/cli/: __init__.py  cli.py  complete.py  config.py  history.py  interactive.py  oly.py  parse.py  payload_scan.py  summary.py  synapse.py
brainsurgery/core/: __init__.py  completion.py  declarative.py  dtypes.py  expr_matching.py  expression.py  mappings.py  matching.py  name_mapping.py  phlora.py  refs.py  resolver.py  scalar_comparison.py  tensor_views.py  transform.py  transform_types.py  types.py  validation.py
brainsurgery/engine/: __init__.py  arena.py  checkpoint_io.py  config.py  execution.py  flags.py  frontend.py  history.py  interactive.py  model.py  output_model.py  output_paths.py  plan.py  provider_utils.py  providers.py  render.py  runtime_flags_policy.py  state.py  state_dicts.py  summary.py  tensor_files.py  verbosity.py  workers.py
brainsurgery/expressions/: __init__.py  access.py  all.py  any.py  count.py  dimensions.py  dtype.py  equal.py  exists.py  iszero.py  not.py  scalar_compare.py  shape.py
brainsurgery/io/: __init__.py  dcp.py  npy.py  safetensors.py  torch.py
brainsurgery/providers/: __init__.py  provider_utils.py  state.py
brainsurgery/synapse/: __init__.py  _mxfp4.py  axon_test.py  axon_test_matrix.py  black_mamba_reference.py  codegen.py  gpt2.py  mxfp4.py  op_parity.py  runtime.py  torch_op_map.yaml
docs/: README.md  axon-grammar.ebnf  axon-spec.md  codebase-reference.md  interfaces-reference.md  oly-conformance.md  oly-spec.md  oly-yaml-grammar.md  synapse-ops-table.md  synapse-spec.md  synapse_yaml_grammar.ebnf
examples/: __init__.py  black_mamba.axon  deepseek_v2_lite.axon  falcon_rw_1b.axon  falcon_rw_1b_synapse.yaml  flexolmo.axon  flexolmo.yaml  gemma3_270m.axon  gemma3_270m.py  gemma3_270m_synapse.py  gemma3_270m_synapse.yaml  glm_4_5_air.axon  gpt2.axon  gpt2.sh  gpt2.yaml  gpt2_kv.axon  gpt2_kv_synapse.py  gpt2_kv_synapse.yaml  gpt2_new.axon  gpt2_new_synapse.yaml  gpt2_synapse.py  gpt2_synapse.yaml  gpt_oss_20b.axon  jamba.axon  jamba_3b.axon  llama3_2_1b.axon  llama3_2_1b_synapse.yaml  mamba.axon  mamba_130m.axon  mamba_2_8b.axon  mistral_7b_v0_1.axon  mistral_7b_v0_1_synapse.yaml  olmoe_1b_7b_0924.axon  olmoe_1b_7b_0924.py  olmoe_1b_7b_0924_synapse.py  olmoe_1b_7b_0924_synapse.yaml  qwen2_5_0_5b.axon  qwen2_5_0_5b_synapse.yaml
flexmore_examples/: README.md  dense_to_expert_moe.py  generate_paper_figures.py  low_rank_expert.py  mistral7b_dense_to_expert_moe.yaml  olmo_1b_0724_hf_dense_to_expert_moe.yaml  olmo_1b_0724_hf_dense_to_expert_moe_reference.py  olmo_1b_0724_hf_dense_to_expert_moe_validate.yaml  olmo_1b_0724_hf_moe_to_flexmore_phlora.yaml  olmo_1b_0724_hf_moe_to_flexmore_phlora_reference.py  olmo_1b_0724_hf_moe_to_flexmore_phlora_validate.yaml  olmo_1b_0724_hf_moe_to_low_rank_expert.yaml  olmo_1b_0724_hf_moe_to_low_rank_expert_reference.py  olmo_1b_0724_hf_moe_to_low_rank_expert_validate.yaml  olmo_1b_0724_low_rank_expert_bridge.axon  olmo_it_dense_to_expert_moe.yaml  run_olmo_1b_0724_demo.py
tests/: __init__.py  conftest.py  model_downloads.py  synapse_test_utils.py  test_arena.py  test_arena_provider_high_level.py  test_black_mamba_axon.py  test_black_mamba_download.py  test_cli.py  test_completion.py  test_concat_transform.py  test_config.py  test_core_aggressive.py  test_core_completion.py  test_coverage_push.py  test_cross_module.py  test_deepseek_v2_lite_alignment.py  test_deepseek_v2_lite_axon.py  test_deepseek_v2_lite_logits.py  test_dtypes.py  test_dump_output.py  test_e2e_dump_compact_shape_regression.py  test_embedded_module_tests.py  test_engine_aggressive.py  test_engine_flags.py  test_entrypoint.py  test_entrypoint_cli_args.py  test_example_gpt2_integration.py  test_execution.py  test_expression_core.py  test_expression_equal.py  test_expression_iszero.py  test_flags.py  test_frontend.py  test_gemma3.py  test_glm4_5_air_alignment.py  test_glm4_5_air_axon.py  test_gpt2.py  test_gpt_hf_roundtrip_diff.py  test_high_level_additional_pipelines.py  (+60 more)
(+235 files in other folders)
