[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brainsurgery"
version = "0.2.10"
authors = [
  { name = "Peter Schneider-Kamp" }
]

description = "swiss army knife of scripts for performing brain surgery on artificial brains."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'numpy',
    'omegaconf',
    'pyaml',
    'rich',
    'safetensors',
    'torch',
    'typer'
]

[project.optional-dependencies]
dev = ["build", "mypy", "pre-commit", "pytest", "ruff", "twine"]

[project.urls]
"Homepage" = "https://github.com/schneiderkamplab/brainsurgery"
"Bug Tracker" = "https://github.com/schneiderkamplab/brainsurgery/issues"

[tool.hatch.build]
include = [
    'brainsurgery',
    'LICENSE',
    'README.md',
]

[project.scripts]
brainsurgery = "brainsurgery:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
files = ["brainsurgery"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = false
